package interfaces;

public interface Cleanable {
    void clean();
    boolean isClean();
}
