package interfaces;

import types.Taste;

public interface Edible {
    Taste getTaste();
}
