package interfaces;

public interface Uprootable {
    void uproot();
    boolean isUprooted();
}
