package types;

public enum GroundType {
    LOOSE,
    NORMAL
}
