package types;

public enum Mood {
    NORMAL,
    ANGRY,
    TIRED
}
