package types;

public enum PlantColor {
    DARK_GREEN,
    LIGHT_GREEN,
    YELLOW
}
