package types;

public enum Taste {
    DELICIOUS,
    DISGUSTING
}
