@startuml
' ============================================
' 0. MANUAL CONFIGURATION
' ============================================
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 8

skinparam nodesep 60
skinparam ranksep 60
skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #2F4F4F
    ArrowColor #2F4F4F
}

' ============================================
' 1. LEGEND
' ============================================
legend top right
|= Access Modifiers |= |
| <color:Green>●</color> | public |
| <color:GoldenRod>◆</color>| protected |
| <color:Red>■</color> | private |
end legend

' ============================================
' 2. INTERFACES
' ============================================
package "interfaces" {
    interface Edible {
        + getTaste(): Taste
    }
    interface Cleanable {
        + clean(): void
        + isClean(): boolean
    }
    interface Uprootable {
        + uproot(): void
        + isUprooted(): boolean
    }
}

' ============================================
' 3. TYPES (Enums & Records)
' ============================================
package "types" {
    enum Mood {
        NORMAL
        ANGRY
        TIRED
    }

    enum GroundType {
        LOOSE
        NORMAL
    }

    enum Taste {
        DELICIOUS
        DISGUSTING
    }

    enum PlantColor {
        DARK_GREEN
        LIGHT_GREEN
        YELLOW
    }

    record Location  {
        - x: int
        - y: int
        + Location(x: int, y: int)
    }
}

' ============================================
' 4. EXCEPTIONS
' ============================================
package "exceptions" {
    exception PlantNotFoundException {
        + PlantNotFoundException(msg: String)
        + getMessage(): String
    }
    exception InvalidActionException <<Exception>> {
        + InvalidActionException(msg: String)
        + getMessage(): String
    }
    exception DisgustingTasteException <<Exception>> {
        + DisgustingTasteException(msg: String)
        + getMessage(): String
    }
    exception InventoryFullException <<Exception>> {
        + InventoryFullException(msg: String)
        + getMessage(): String
    }
}

' ============================================
' 5. MODEL (Combined Base Classes & Implementation)
' ============================================
package "model" {

    ' --- Base Classes (Abstract) ---
    abstract class Item {
        # name: String
        # weight: double
        + Item(name: String, weight: double)
        + getName(): String
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    abstract class Plant {
        # species: String
        # color: PlantColor
        # isUprooted: boolean
        # isBrittle: boolean
        # location: Location
        + Plant(species: String, color: PlantColor, loc: Location, isBrittle: boolean)
        + {abstract} hasFruit(): boolean
        + {abstract} harvest(amount: int): List<Item>
        + {abstract} getSampleItem(): Item
        + getName(): String
        + getLocation(): Location
        + getColor(): PlantColor
        + isBrittle(): boolean
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    abstract class Character {
        # name: String
        # mood: Mood
        # currentLocation: Location
        # inventory: Inventory
        + Character(name: String, startLoc: Location)
        + {abstract} move(ground: Ground): void
        + setLocation(loc: Location): void
        # setMood(mood: Mood): void
        + getMood(): Mood
        + getInventory(): Inventory
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    ' --- Implementation Classes ---
    class PotatoTuber {
        - isCooked: boolean
        - isClean: boolean
        + PotatoTuber(weight: double)
        + getTaste(): Taste
        + clean(): void
        + isClean(): boolean
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    class PotatoPlant {
        - tubers: List<PotatoTuber>
        + PotatoPlant(loc: Location, color: PlantColor, isBrittle: boolean)
        + hasFruit(): boolean
        + harvest(amount: int): List<Item>
        + getSampleItem(): Item
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    class Skuperfield {
        - hasItemUncertainty: boolean
        + Skuperfield(startLoc: Location)
        + move(ground: Ground): void
        + uprootPlant(ground: Ground): Plant
        + examine(plant: Plant): Item
        + realizeItemGrowInGround(item: Item): void
        + tryToEat(item: Item): void
        + putInPocket(item: Item): void
        + putInPocket(items: List<? extends Item>): void
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    class Inventory {
        - maxCapacity: int
        - items: List<Item>
        + Inventory(capacity: int)
        + addItem(item: Item): void
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    class Ground {
        - type: GroundType
        - plants: List<Plant>
        - fog: Fog
        + Ground(type: GroundType)
        + setFog(fog: Fog): void
        + addPlant(plant: Plant): void
        + getPlantAt(loc: Location): Plant
        + dissipateFog(): void
        + getDominantColor(): String
        + hasMajorityBrittlePlants(): boolean
        + getPlantCount(): int
        + isDifficultToMove(): boolean
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }

    class Fog {
        - isDense: boolean
        + Fog()
        + dissipate(): void
        + toString(): String
        + equals(o: Object): boolean
        + hashCode(): int
    }
}

' ============================================
' 7. RELATIONSHIPS
' ============================================
' Inheritance
PotatoTuber -up-|> Item
PotatoPlant -up-|> Plant
Skuperfield -up-|> Character

' Interfaces
PotatoTuber .up.|> Edible
PotatoTuber .up.|> Cleanable
Plant .up.|> Uprootable

' Composition and Usage
PotatoPlant o-left- PotatoTuber
Character *-- Inventory
Ground o-- Fog
Ground o-- Plant

' Links to Types
Character o-up- Location
Plant o-up- Location

' Error Dependencies (Arrows down to Exceptions package)
Skuperfield .down.> PlantNotFoundException
Skuperfield .down.> DisgustingTasteException
Skuperfield .down.> InventoryFullException
Character .down.> InvalidActionException
Ground .down.> InvalidActionException
Ground .down.> PlantNotFoundException
Fog .down.> InvalidActionException
Inventory .down.> InventoryFullException

' Usage dependencies
Skuperfield .right.> Ground
Skuperfield .right.> Plant

' Hidden links for package alignment
Item -[hidden]right- Plant
Plant -[hidden]right- Character

@enduml
